--- a/src/index.scss
+++ b/src/index.scss
@@ -3471,7 +3471,7 @@ transition: border-color .25s ease-in-out;
 }
 .about-text{
   text-align:justify;
-  margin-top: 25px;
+  padding: 20px 10px;
 }
 .policy .about-text{
   padding: 30px 10px;
@@ -3481,7 +3481,7 @@ transition: border-color .25s ease-in-out;
   margin-top: 5px;
 }
 .DraftEditor-root{
-  height: 100px;
+  height: 150px;
 }
 
 /****************************RESPONSIVE************************/
