--- a/src/index.scss
+++ b/src/index.scss
@@ -3164,6 +3164,10 @@ display: flex;
 
 
 /****************************REPORT MANAGEMENT************************/
+// .recharts-legend-wrapper{
+//   top:-10px!important;
+//   margin-bottom: 10px;
+// }
 .map-view{
   padding:12px 10px;
 }
@@ -3428,8 +3432,6 @@ transition: border-color .25s ease-in-out;
 .go-bottom{
   position: relative;
 }
-
-
 .search-label-field{
   transition: transform .25s, opacity .25s ease-in-out;
   transform-origin: 0 0;
