--- a/src/index.scss
+++ b/src/index.scss
@@ -3168,6 +3168,10 @@ display: flex;
 //   top:-10px!important;
 //   margin-bottom: 10px;
 // }
+input[type=date]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  display: none;
+}
 .map-view{
   padding:12px 10px;
 }
