--- a/src/index.scss
+++ b/src/index.scss
@@ -3238,7 +3238,7 @@ input[type=date]::-webkit-inner-spin-button {
 // }
 .record-box {
   text-align: center;
-  font-size: 20px;
+  font-size: 17px;
   margin: 35px 0;
   }
 input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -3305,158 +3305,12 @@ input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
 .do-SearchBox-input{
   height: 39px;
 }
-// .form-label-group{
-//   position: relative;
+// .do-TreeSelect:hover{
+//   border-color: $active-font-color;
 // }
-// .form-label-group > label {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   display: block;
-//   width: 100%;
-//   margin-bottom: 0;
-//   line-height: 1.5;
-//   color: #495057;
-//   border: 1px solid transparent;
-//   border-radius: .25rem;
-//   transition: all .1s ease-in-out;
+// .do-SearchBox-input:hover{
+//   border-color: $active-font-color;
 // }
-// .do-SearchBox > label{
-//   transition: all .1s ease-in-out;
-// }
-// .form-label-group > div > div > input.do-SearchBox-input, .form-label-group > label {
-//   padding: var(--input-padding-y) var(--input-padding-x);
-// }
-// .form-label-group input.do-SearchBox-input:not(:placeholder-shown) {
-//   padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
-//   padding-bottom: calc(var(--input-padding-y) / 3);
-// }
-
-// :root {
-//   --input-padding-x: 8px;
-//   --input-padding-y: 7px;
-// }
-
-
-// .form-label-group {
-//   position: relative;
-//   margin-bottom: 1rem;
-// }
-
-// .form-label-group > div > div > input.do-SearchBox-input,
-// .form-label-group > label {
-//   padding: var(--input-padding-y) var(--input-padding-x);
-// }
-
-// .form-label-group > label {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   display: block;
-//   width: 100%;
-//   margin-bottom: 0; /* Override default `<label>` margin */
-//   line-height: 1.5;
-//   color: #495057;
-//   border: 1px solid transparent;
-//   border-radius: .25rem;
-//   transition: all .1s ease-in-out;
-// }
-
-// .form-label-group input.do-SearchBox-input::-webkit-input-placeholder {
-//   color: transparent;
-// }
-
-// .form-label-group input.do-SearchBox-input:-ms-input-placeholder {
-//   color: transparent;
-// }
-
-// .form-label-group input.do-SearchBox-input::-ms-input-placeholder {
-//   color: transparent;
-// }
-
-// .form-label-group input.do-SearchBox-input::-moz-placeholder {
-//   color: transparent;
-// }
-
-// .form-label-group input.do-SearchBox-input::placeholder {
-//   color: transparent;
-// }
-
-// .form-label-group > div > div > input.do-SearchBox-input:not(:placeholder-shown) {
-//   padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (1 / 8));
-//   padding-bottom: calc(var(--input-padding-y) / 1);
-// }
-// .form-label-group input.do-SearchBox-input:not(:placeholder-shown) ~ label {
-//   padding-top: calc(var(--input-padding-y) / 1);
-//   padding-bottom: calc(var(--input-padding-y) / 1);
-//   font-size: 12px;
-//   color: #777;
-// }
-/***********************************************************************************/
-
-.floating-label-wrap
-{
-    position: relative;
-}
-
-.floating-label-field {
-    position: relative;
-font: inherit;
-    line-height: 1;
-    display: block;
-    width: 100%;
-color: rgba(44, 62, 80, .75);
-    border-width: 0;
-    z-index: 2000;
-}
-
-.floating-label-field--s1{
-    max-height: 4em;
-    padding: 1.5em;
-transition: border-color .25s ease-in-out;
-    color: rgba(255, 255, 255, .75);
-    border-bottom: 3px solid rgba(255, 255, 255, .05);
-    background-color: transparent;
-}
-
-.floating-label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    user-select: none;
-    z-index: 1500;
-}
-.floating-label-field--s1 + .floating-label{
-    z-index: 1500;
-    padding: 1.5em;
-    transition: transform .25s, opacity .25s ease-in-out;
-    transform-origin: 0 0;
-    opacity: .5;
-}
-.floating-label-field--s1:focus + .floating-label{
-  transform: translate(.25em, -30%) scale(.8);
-    opacity: .25;
-}
-.go-bottom{
-  position: relative;
-}
-.search-label-field{
-  transition: transform .25s, opacity .25s ease-in-out;
-  transform-origin: 0 0;
-  opacity: .5;
-  position: absolute;
-  top: 7px;
-  left: 10px;
-  z-index: 1500;
-}
-.do-TreeSelect:empty ~ .search-label-field{
-  color: red;
- }
-.do-TreeSelect:focus-within ~ .search-label-field{
-  display: none;
- }
-
-
 
 /****************************ABOUT US--POLICIES************************/
 
@@ -3584,7 +3438,7 @@ transition: border-color .25s ease-in-out;
   }
   .LineChart.main-wrapper {
     padding: 43px 0 0px 0px;
-    margin: 17px;
+    margin: 5px;
 }
 .recharts-wrapper  {
   > .recharts-surface{
