--- a/src/index.scss
+++ b/src/index.scss
@@ -3172,6 +3172,9 @@ li.recharts-legend-item {
   position: relative;
   left: 55px;
 }
+.report-label{
+  font-size: 18px;
+}
 input[type=date]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   display: none;
@@ -3472,4 +3475,5 @@ input.do-SearchBox-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    
 //   }
 // }
+
 
