--- a/src/variables.scss
+++ b/src/variables.scss
@@ -27,6 +27,8 @@ $center-color:#EB984E;
 $delivered-color:#F06292;
 $red:#d82525;
 $reject-red:#EF4A4A;
+$map-red:#EA4335;
+$map-blue:#6991FD;
 $disable:#EF531D;
 $green:#359123;
 $accept-green:#1CCE46;
