user option mark

--- a/src/index.scss
+++ b/src/index.scss
@@ -1393,6 +1393,9 @@ top: 27px
   &.shop-address .check-mark{
     left: 130px;
   }
+  &.shop-local .check-mark{
+    left: 128px;
+  }
 
   &.shop-type .check-mark{
     left: 100px;
